--- a/src/components/TronLinkGuide/TronLinkGuide.scss
+++ b/src/components/TronLinkGuide/TronLinkGuide.scss
@@ -1,5 +1,6 @@
 .tronLink {
     margin: 0 10px;
+    max-width: 85%;
     background: #ffffff;
     border-radius: 4px;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.08);
